# yatc-project

./: README.md  docker-compose.yaml  init-minikube.cmd
fe-angular-material/: .dockerignore  .gitignore  Dockerfile.k8s  Dockerfile.multi  Dockerfile.single  README.md  angular.json  docker-run.cmd  docker-save.cmd  package-lock.json  package.json
fe-angular-material/k8s/: 09-build-image.sh  (+6 more)
fe-react-mui/: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.k8s  Dockerfile.multi  Dockerfile.single  README.md  docker-build-multi.cmd  docker-run.cmd  package-lock.json  package.json
gw-spring-cloud/: Dockerfile  Dockerfile.k8s  Dockerfile.native  HELP.md  README.md  docker-build.cmd  docker-run.cmd  pom.xml
ip-keycloak/: README.md
k8s/: 00-init-cluster.cmd  00-init-cluster.sh  01-create-cluster.cmd  01-create-cluster.sh  02-enable-addons.cmd  02-enable-addons.sh  10-apply-ingress.cmd  10-apply-ingress.sh  20-apply-clusterrole.cmd  20-apply-clusterrole.sh  90-delete-ingress.cmd  90-delete-ingress.sh  99-delete-cluster.cmd  README.md  apply-clusterrole.cmd  apply-ingress.cmd  delete-ingress.cmd  open-dashboard.cmd  open-dashboard.sh  open-tunnel.cmd  open-tunnel.sh  yatc-clusterrole.yaml  yatc-ingress.yaml
ms-go-fiber/: .dockerignore  Dockerfile  README.md  docker-build.cmd  docker-run.cmd  go.mod  go.sum  main.go
ms-go-gin/: README.md  docker-save.cmd
ms-node-express/: .dockerignore  .gitignore  Dockerfile  Dockerfile.k8s  Dockerfile.multi  README.md  app.js  docker-build.cmd  docker-run.cmd  package-lock.json  package.json
ms-python-fastapi/: Dockerfile  Dockerfile.k8s  requirements.txt
ms-quarkus-jee/: README.md  pom.xml
ms-quarkus-munity/: README.md
ms-rust-axum/: .env.dc  .env.release  Cargo.toml  Dockerfile  Dockerfile.k8s  Dockerfile.multi  Dockerfile.single  README.md  docker-build-single.cmd  docker-build.cmd  docker-run.cmd  docker-save.cmd
ms-rust-axum/k8s/: 00-init-k8s.cmd  09-build-image.cmd  09-build-image.sh  10-apply-pod.cmd  10-apply-pod.sh  99-delete-all.cmd  99-delete-all.sh  ms-rust-axum-deployment.yaml  ms-rust-axum-service.yaml
ms-rust-axum/k8s/cache/: .gitignore
ms-rust-axum/src/: config.rs  controller.rs  domain.rs  kafka.rs  main.rs
ms-rust-axum/src/controller/: test.rs
ms-rust-axum/src/domain/model/: event.rs
ms-rust-axum/src/domain/repository/: event_repository.rs
ms-rust-axum/src/kafka/: common_configuration.rs  consumer.rs  event.rs  producer.rs
ms-rust-axum/src/service/: event_service.rs
ms-spring-reactive/: Dockerfile.k8s  dependency-suppression.xml  pom.xml
ms-spring-servlet/: Dockerfile  Dockerfile.k8s  pom.xml
yatc-alloy/: README.md
yatc-dependencytrack/: README.md
yatc-kafka/: Dockerfile.k8s  README.md
yatc-keycloak/: README.md
yatc-mongo/: README.md
yatc-postgres/: README.md
yatc-postgresql/: README.md
yatc-prometheus/: README.md  prometheus.yaml  prometheus.yml
yatc-proxy/: README.md
yatc-redis/: README.md  redis.conf
yatc-support-pod/: README.md
(+306 files in other folders)
